fix: Avatar is stretched

--- a/src/common/components/Avatar/Avatar.module.css
+++ b/src/common/components/Avatar/Avatar.module.css
@@ -24,13 +24,12 @@
 
 .Image {
   border-radius: 15%;
+  object-fit: cover;
   width: 100%;
   height: 100%;
   position: absolute;
-  top: -9999px;
-  left: -9999px;
-  right: -9999px;
-  bottom: -9999px;
+  top: 0;
+  left: 0;
   margin: auto;
 }
 
